# vitulus_navi

./: .gitignore  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml  setup.py
config/: base_local_planner_params.yaml  base_teb_local_planner_params.yaml  base_teb_local_planner_paramsOLD.yaml  carrot_planner_params.yaml  controllers.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  graceful_controller_params.yaml  local_costmap_params.yaml  move_base.yaml  mprm05.mprim  navi_manager.yaml  navi_rviz.rviz  navsat_imu.yaml  neo_local_planner_params.yaml  planners.yaml  recovery_behavior.yaml  sbpl_lattice_planner_params.yaml
launch/: depth_to_cloud.launch  ekf_base.launch  ekf_outdoor.launch  ekf_outdoor_all.launch  elevation_mapping.launch  launch_navi.launch  map_edit_test.launch  navi_man.launch  navsat.launch  obstacles.launch  octomapping.launch  pointcloud_to_laserscan.launch  rosconsole.conf  test_full_coverage_path_planner.launch  topic_tools.launch  traversability_estimation.launch  vitulus_ekf_indoor.launch  vitulus_ekf_outdoor.launch  vitulus_navi.launch  vitulus_navi_indoor.launch  vitulus_navi_mb.launch  vitulus_navi_mbf.launch  vitulus_navi_outdoor.launch  vitulus_navsat.launch  vitulus_rtabmap_indoor.launch  vitulus_rtabmap_outdoor.launch
maps/: basefixed.pgm  basefixed.xcf  basefixed1.pgm  basefixed2.pgm  basefixed3.pgm  basefixed4.pgm  basefixed5.pgm  basefixed6.pgm  map_fill.pgm  map_fill.yaml  mymap.pgm  mymap.yaml  myzahrada.yaml  zahrada.pgm  zahrada.xcf  zahrada.yaml  (+1 more)
(+55 files in other folders)
